--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -21,13 +21,13 @@ body {
 }
 
 .datagrid table td, .datagrid table th {
-    padding: 3px 10px;
+    /* padding: 3px 10px;*/
 }
 
 .datagrid table thead th {
-    background: #e8d5a0;
+    background: #93e886;
     color: #0f0f0f;
-    font-size: 15px;
+    font-size: 18px;
     font-weight: bold;
     border-left: 1px solid #0f0f0f;
 }
@@ -39,13 +39,14 @@ body {
 .datagrid table tbody td {
     color: #0f0f0f;
     border-left: 1px solid #0f0f0f;
-    font-size: 12px;
+    font-size: 15px;
     font-weight: normal;
 }
 
 
 .datagrid table tbody tr:nth-child(even) {
-    background: #fff5d8;
+    background: #c6ffb0;
+    /*background: #fff5d8;*/
     color: #0f0f0f;
 }
 
@@ -55,4 +56,73 @@ body {
 
 .datagrid table tbody tr:last-child td {
     border-bottom: none;
+}
+
+.checkbox {
+    transform:scale(1.9);
+    opacity:0.9;
+    cursor:pointer;
+}
+
+.button-main {
+    width: 300px;
+    background-color:#68d651;
+    border-radius:16px;
+    font-size:36px;
+    border:2px solid #20c931;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    padding:12px 31px;
+}
+.button-main:hover {
+    background-color:#8ced57;
+}
+.button-main:active {
+
+    position:relative;
+    top:1px;
+}
+
+
+.my-th-selected {
+    width: 50px;
+    text-align: center;
+    font-size:14px;
+    border: 2px solid #20c931;
+    background: #8ced57;
+    /*background: #fff5d8;*/
+    color: #ffffff;
+}
+.my-th {
+    width: 50px;
+    text-align: center;
+    font-size:14px;
+    border: 2px solid #20c931;
+    background: #68d651;
+    /*background: #fff5d8;*/
+    color: #ffffff;
+}
+.my-th:hover{
+    background: #8ced57;
+}
+
+.myButton {
+
+    width: 100px;
+    background-color:#68d651;
+    border-radius:16px;
+    font-size:16px;
+    border:2px solid #20c931;
+    cursor:pointer;
+    color:#ffffff;
+    font-family:Arial;
+    padding:0px;
+}
+.myButton:hover {
+    background-color:#5cbf2a;
+}
+.myButton:active {
+    position:relative;
+    top:1px;
 }
