--- a/src/main/resources/public/css/index.css
+++ b/src/main/resources/public/css/index.css
@@ -66,17 +66,18 @@ body {
 
 .button-main {
     width: 300px;
-    background-color: #d69336;
+    background-color:#68d651;
     border-radius:16px;
     font-size:36px;
-    border:2px solid #d69336;
+    border:2px solid #20c931;
     cursor:pointer;
     color:#ffffff;
     font-family:Arial;
     padding:12px 31px;
 }
 .button-main:hover {
-    background-color:#d69336;
+    background-color:#8ced57;
+
 }
 .button-main:active {
 
